0.11.101
	+ Bugfix: Fix memory leak in models while cloning types. Now
	cloning is controlled by clone method in types
	+ Bugfix: Union type now checks for its uniqueness
	+ DESTROY is not an autoloaded method anymore
	+ HasOne fields now may set printable value from the foreign field
	to set its value
0.11.100
	+ Bugfix. Fix issue with event filters and empty hashes
	+ Bugfix. Cache stuff in log and soap watcher to avoid memory leaks
	+ Bugfix. Fix bug that prevented the user from being warned when a row to
	  be deleted is being used by other model
	+ Bugfix. Add missing use of EBox::Global in State event watcher
	+ Added progress screen, now pogress screen keeps track of the changed
	  state of the modules and change the top page element properly
	+ Do not exec() to restart apache outside mod_perl
	+ Improve apache restart script
	+ Improve progress screen 
0.11.99
	+ DataTable contains the property 'enableProperty' to set a column
	called 'enabled' to enable/disable rows from the user point of
	view. The 'enabled' column is put the first
	+ Added state to the RAID report instead of simpler active boolean
        + Fix bug when installing new event components and event GConf
	subtree has not changed
	+ Add RSS dispatcher to show eBox events under a RSS feed
	+ Rotate log files when they reach 10MB for 7 rotations
	+ Configurable minimum free space left for being notified by means
	of percentage
	+ Add File type including uploading and downloading
	+ Event daemon now checks if it is possible to send an event
	before actually sending it
	+ Added Action forms to perform an action without modifying
	persistent data
	+ Log queries are faster if there is no results
	+ Show no data stored when there are no logs for a domain
	+ Log watcher is added in order to notify when an event has
	happened. You can configure which log watcher you may enable and
	what you want to be notify by a determined filter and/or event.